package com.task.cybersapiant.utils

val priorities = listOf("High", "Medium", "Low")